# finam-api-manager

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: workflow.yml
examples/: CMakeLists.txt  asset.cpp  data.cpp  main.cpp  metrics.cpp  order.cpp  report.cpp
include/finam-api-manager/: account.h  asset.h  auth.h  client.h  data.h  executor.h  metrics.h  models.h  order.h  report.h  service_account.h  service_asset.h  service_auth.h  service_data.h  service_metrics.h  service_order.h  service_report.h  service_time.h  time.h
include/finam-trade-api/: client.h  executor.h  models.h
src/: account.cpp  asset.cpp  auth.cpp  client.cpp  data.cpp  executor.cpp  metrics.cpp  models.cpp  order.cpp  report.cpp  service_auth.cpp  service_time.cpp  time.cpp
tests/: CMakeLists.txt  account_tests.cpp  asset_tests.cpp  auth_tests.cpp  data_tests.cpp  metrics_tests.cpp  models_tests.cpp  order_tests.cpp  report_tests.cpp  time_tests.cpp
